Update: Intro component style

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,6 +1,6 @@
 .intro {
   display: flex;
-  height: 77vh;
+  height: 70vh;
   margin-top: 6rem;
 }
 
@@ -87,4 +87,17 @@
   left: -24%;
   padding: 0;
   border-radius: 50%;
+}
+
+/* blur */
+.blur-intro1 {
+  top: -18%;
+  left: 56%;
+}
+
+.blur-intro2 {
+  top: 17rem;
+  left: -9rem;
+  width: 21rem;
+  height: 26rem;
 }
