--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5rem;
+  padding: 3rem 0;
 }
 
 .project > span:nth-of-type(1) {
