Add: responsive style

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@
   overflow: hidden;
   color: var(--black);
 }
+
+@media screen and (max-width: 480px) {
+  .App {
+    padding: 0.5rem 1rem;
+  }
+}
