--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
+  margin: 10rem auto;
   padding: 3rem 0;
+  width: 70%;
+  overflow: hidden;
 }
 
 .project > span:nth-of-type(1) {
@@ -24,7 +26,7 @@
 }
 
 .project-slider {
-  margin-top: 3rem;
+  margin-top: 4rem;
   width: 100%;
 }
 
@@ -33,7 +35,12 @@
 }
 
 .project .swiper img {
-  border-radius: 19px;
-  width: 19rem;
+  width: 20rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
+}
+
+@media screen and (max-width: 480px) {
+  .project {
+    width: 100%;
+  }
 }
