--- a/src/components/TechStack/TechStack.css
+++ b/src/components/TechStack/TechStack.css
@@ -1,18 +1,24 @@
 .tech-stack {
   position: relative;
-  margin-top: 4rem;
+  margin-top: 12rem;
   margin-bottom: 13rem;
   padding: 0 3rem;
+}
+
+.awesome {
+  margin-bottom: 4rem;
 }
 
 .awesome > h2 {
   color: var(--black);
   font-size: 2.5rem;
+  text-align: center;
 }
 
 .cards {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 4rem;
 }
 
 /* blur */
