--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -2,20 +2,19 @@
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding: 2px;
-  border: 3px solid var(--orange);
-  border-radius: 1rem;
+  padding: 4px 8px;
+  border-radius: 1.5rem;
   cursor: pointer;
 }
 
 .toggle > * {
-  width: 1rem;
-  height: 1rem;
+  width: 1.6rem;
+  height: 1.6rem;
   color: var(--orange);
 }
 
 .toggle__btn {
   position: absolute;
   border-radius: 100%;
-  background: var(--orange);
+  background: white;
 }
